[-] FO : FixBug #PSCSX-102 - email input too small

--- a/themes/default-bootstrap/css/modules/blocknewsletter/blocknewsletter.css
+++ b/themes/default-bootstrap/css/modules/blocknewsletter/blocknewsletter.css
@@ -48,7 +48,7 @@
     #footer #newsletter_block_left .form-group .form-control {
       height: 45px;
       line-height: 30px;
-      max-width: 267px;
+      max-width: 400px;
       background: #3c3c3c;
       border-color: #515151;
       color: white;
